:recycle: Remove signSignature from framework source
