# framework/src/modules/http_api/schema/swagger.yml
@@ -1131,11 +1131,6 @@ definitions:
         description: |
           Derived from a SHA-256 hash of the transaction object,
           that is signed by the private key of the account who created the transaction.
-      signSignature:
-        type: string
-        format: signature
-        example: 2821d93a742c4edf5fd960efad41a4def7bf0fd0f7c09869aed524f6f52bf9c97a617095e2c712bd28b4279078a29509b339ac55187854006591aa759784c205
-        description: Contains the second signature, if the transaction is sent from an account with second passphrase activated.
       signatures:
         type: array
         description: If the transaction is a multisignature transaction, all signatures of the members of the corresponding multisignature group will be listed here.
@@ -1510,11 +1505,6 @@ definitions:
         description: |
           Derived from a SHA-256 hash of the transaction object,
           that is signed by the private key of the account who created the transaction.
-      signSignature:
-        type: string
-        format: signature
-        example: 2821d93a742c4edf5fd960efad41a4def7bf0fd0f7c09869aed524f6f52bf9c97a617095e2c712bd28b4279078a29509b339ac55187854006591aa759784c205
-        description: Contains the second signature, if the transaction is sent from an account with second passphrase activated.
       signatures:
         type: array
         items:
